--- a/OoTTracker/ClientApp/src/app/notes/location-selection/location-selection.component.scss
+++ b/OoTTracker/ClientApp/src/app/notes/location-selection/location-selection.component.scss
@@ -1,26 +1,33 @@
-.green {
-  font-weight: bold;
+﻿.green {
   color: green;
 }
 
 .red {
-  font-weight: bold;
   color: red;
 }
 
 .blue {
-  font-weight: bold;
   color: blue;
 }
 
 .purple {
-  font-weight: bold;
   color: mediumpurple;
 }
 
 .orange {
-  font-weight: bold;
   color: darkorange;
+}
+
+.yellow {
+  color: #dddd55;
+}
+
+.black {
+  color: black;
+}
+
+.light-blue {
+  color: deepskyblue;
 }
 
 .gray {
