--- a/OoTTracker/ClientApp/src/app/home/home.component.html
+++ b/OoTTracker/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="home-container">
   <app-tracker class="tracker"></app-tracker>
 
   <!--  <div class="checklist">Checklist</div>-->
