--- a/OoTTracker/ClientApp/src/app/notes/notes.component.html
+++ b/OoTTracker/ClientApp/src/app/notes/notes.component.html
@@ -1,85 +1,83 @@
-<h1>Hints:</h1>
-
-<div class="path-hints">
+<div class="hints path-hints">
   <h2>Path Hints</h2>
   <div class="path-hint">
-    <select class="path-hint-dropdown"></select>
+    <app-location-selection></app-location-selection>
     <label>&nbsp; is on the path to &nbsp; </label>
     <app-boss-selection></app-boss-selection>
   </div>
   <div class="path-hint">
-    <select class="path-hint-dropdown"></select>
+    <app-location-selection></app-location-selection>
     <label>&nbsp; is on the path to &nbsp; </label>
     <app-boss-selection></app-boss-selection>
   </div>
   <div class="path-hint">
-    <select class="path-hint-dropdown"></select>
+    <app-location-selection></app-location-selection>
     <label>&nbsp; is on the path to &nbsp; </label>
     <app-boss-selection></app-boss-selection>
   </div>
   <div class="path-hint">
-    <select class="path-hint-dropdown"></select>
+    <app-location-selection></app-location-selection>
     <label>&nbsp; is on the path to &nbsp; </label>
     <app-boss-selection></app-boss-selection>
   </div>
   <div class="path-hint">
-    <select class="path-hint-dropdown"></select>
+    <app-location-selection></app-location-selection>
     <label>&nbsp; is on the path to &nbsp; </label>
     <app-boss-selection></app-boss-selection>
   </div>
 </div>
 
-<div class="barren-hints">
+<div class="hints barren-hints">
   <h2>Barren Hints</h2>
   <div class="barren-hint">
     <label>Plundering &nbsp; </label>
-    <select class="path-hint-dropdown"></select>
+    <app-location-selection></app-location-selection>
     <label>&nbsp; is foolish.</label>
   </div>
   <div class="barren-hint">
     <label>Plundering &nbsp; </label>
-    <select class="path-hint-dropdown"></select>
+    <app-location-selection></app-location-selection>
     <label>&nbsp; is foolish.</label>
   </div>
   <div class="barren-hint">
     <label>Plundering &nbsp; </label>
-    <select class="path-hint-dropdown"></select>
+    <app-location-selection></app-location-selection>
     <label>&nbsp; is foolish.</label>
   </div>
 </div>
 
-<div class="always-hints">
+<div class="hints always-hints">
   <h2>Always Hints</h2>
   <div class="big-poes-always-hint">
-    <select class="path-hint-dropdown"></select>
+    <app-item-selection></app-item-selection>
     <label>&nbsp; Big Poes</label>
   </div>
   <div class="skull-mask-always-hint">
-    <select class="path-hint-dropdown"></select>
+    <app-item-selection></app-item-selection>
     <label>&nbsp; Skull Mask</label>
   </div>
   <div class="ocarina-always-hint">
-    <select class="path-hint-dropdown"></select>
+    <app-item-selection></app-item-selection>
     <label>&nbsp; Ocarina of Time Song</label>
   </div>
   <div class="biggoron-always-hint">
-    <select class="path-hint-dropdown"></select>
+    <app-item-selection></app-item-selection>
     <label>&nbsp; Biggoron</label>
   </div>
   <div class="30-skulls-always-hint">
-    <select class="path-hint-dropdown"></select>
+    <app-item-selection></app-item-selection>
     <label>&nbsp; 30 Skulls</label>
   </div>
   <div class="40-skulls-always-hint">
-    <select class="path-hint-dropdown"></select>
+    <app-item-selection></app-item-selection>
     <label>&nbsp; 40 Skulls</label>
   </div>
   <div class="50-skulls-always-hint">
-    <select class="path-hint-dropdown"></select>
+    <app-item-selection></app-item-selection>
     <label>&nbsp; 50 Skulls</label>
   </div>
 </div>
 
-<div class="sometimes-hints">
+<div class="hints sometimes-hints">
   <h2>Sometimes Hints</h2>
 </div>
