--- a/OoTTracker/ClientApp/src/app/tracker/equipment/equipment.component.scss
+++ b/OoTTracker/ClientApp/src/app/tracker/equipment/equipment.component.scss
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  padding: 3.5rem 0 0 3.5rem;
+  padding: .7rem 0 0 1.2rem;
 }
 
 .medallion-row {
@@ -16,7 +16,7 @@
 }
 
 img {
-  width: 7rem;
-  margin-right: 1rem;
-  margin-bottom: 3.25rem;
+  width: 2.4rem;
+  margin-right: .3rem;
+  margin-bottom: .85rem;
 }
