--- a/OoTTracker/ClientApp/src/app/tracker/other/other.component.scss
+++ b/OoTTracker/ClientApp/src/app/tracker/other/other.component.scss
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: row;
   height: 100%;
-  padding: 3.5rem 0 0 3.5rem;
+  padding: .75rem 0 0 .6rem;
 
   img {
-    width: 7rem;
-    padding-bottom: 3.25rem;
+    width: 2.2rem;
+    padding-bottom: 1.1rem;
     margin-right: .5rem;
   }
 }
