--- a/OoTTracker/ClientApp/src/app/tracker/songs/songs.component.scss
+++ b/OoTTracker/ClientApp/src/app/tracker/songs/songs.component.scss
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: row;
   height: 100%;
-  padding: 9rem 0 0 3rem;
+  padding: 3rem 0 0 .4rem;
 
   img {
-    width: 3.5rem;
-    padding-bottom: 1.75rem;
-    margin-right: 1rem;
+    width: 1.2rem;
+    padding-bottom: .4rem;
+    margin-right: .1rem;
   }
 }
 
