--- a/OoTTracker/ClientApp/src/app/home/home.component.html
+++ b/OoTTracker/ClientApp/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home-container">
   <app-tracker class="tracker"></app-tracker>
 
-  <!--  <div class="checklist">Checklist</div>-->
+    <div class="checklist">Checklist</div>
 
   <app-notes class="notes"></app-notes>
 </div>
