--- a/OoTTracker/ClientApp/src/app/notes/notes.component.html
+++ b/OoTTracker/ClientApp/src/app/notes/notes.component.html
@@ -2,27 +2,27 @@
   <h2>Path Hints</h2>
   <div class="path-hint">
     <app-location-selection></app-location-selection>
-    <label>&nbsp; is on the path to &nbsp; </label>
+    <label>&nbsp; path to &nbsp; </label>
     <app-boss-selection></app-boss-selection>
   </div>
   <div class="path-hint">
     <app-location-selection></app-location-selection>
-    <label>&nbsp; is on the path to &nbsp; </label>
+    <label>&nbsp; path to &nbsp; </label>
     <app-boss-selection></app-boss-selection>
   </div>
   <div class="path-hint">
     <app-location-selection></app-location-selection>
-    <label>&nbsp; is on the path to &nbsp; </label>
+    <label>&nbsp; path to &nbsp; </label>
     <app-boss-selection></app-boss-selection>
   </div>
   <div class="path-hint">
     <app-location-selection></app-location-selection>
-    <label>&nbsp; is on the path to &nbsp; </label>
+    <label>&nbsp; path to &nbsp; </label>
     <app-boss-selection></app-boss-selection>
   </div>
   <div class="path-hint">
     <app-location-selection></app-location-selection>
-    <label>&nbsp; is on the path to &nbsp; </label>
+    <label>&nbsp; path to &nbsp; </label>
     <app-boss-selection></app-boss-selection>
   </div>
 </div>
