--- a/OoTTracker/ClientApp/src/app/notes/notes.component.scss
+++ b/OoTTracker/ClientApp/src/app/notes/notes.component.scss
@@ -1,3 +1,13 @@
+* {
+  font-size: 10pt;
+}
+
+h2 {
+  font-size: 10pt;
+  margin: 0;
+  padding: 0;
+}
+
 .path-hints {
   background-color: lightgreen;
 }
