--- a/OoTTracker/ClientApp/src/app/checklist/checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/checklist.component.html
@@ -1,1 +1,4 @@
-<p>checklist works!</p>
+<div class="checklist-container">
+  <app-forest-checklist></app-forest-checklist>
+  <app-mountain-checklist></app-mountain-checklist>
+</div>
