--- a/OoTTracker/ClientApp/src/app/checklist/castle-checklist/castle-checklist.component.scss
+++ b/OoTTracker/ClientApp/src/app/checklist/castle-checklist/castle-checklist.component.scss
@@ -24,11 +24,7 @@ h2 {
 .forest-checklist {
   h1 {
     color: white;
-    background-color: green;
-  }
-
-  h2 {
-    background-color: #99dd99;
+    background-color: #666666;
   }
 }
 
