--- a/OoTTracker/ClientApp/src/app/checklist/forest-checklist/forest-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/forest-checklist/forest-checklist.component.html
@@ -3,11 +3,11 @@
 
   <app-list [name]="'Kokiri Forest'" [list]="kokiriChecks" [color]="'green'"></app-list>
 
-  <app-list [name]="'Deku Tree'" [color]="'green'"></app-list>
+  <app-list [name]="dungeonSource + 'Deku Tree'" [color]="'green'"></app-list>
 
   <app-list [name]="'Lost Woods'" [list]="lostWoodsChecks" [color]="'green'"></app-list>
 
   <app-list [name]="'Sacred Forest Meadow'" [list]="sacredForestMeadowChecks" [color]="'green'"></app-list>
 
-  <app-list [name]="'Forest Temple'" [color]="'green'"></app-list>
+  <app-list [name]="dungeonSource + 'Forest Temple'" [color]="'green'"></app-list>
 </div>
