--- a/OoTTracker/ClientApp/src/app/checklist/hyrule-field-checklist/hyrule-field-checklist.component.scss
+++ b/OoTTracker/ClientApp/src/app/checklist/hyrule-field-checklist/hyrule-field-checklist.component.scss
@@ -18,17 +18,13 @@ h2 {
 
 .checklist {
   margin: .5rem 0 0 0;
-  width: 14rem
+  width: 12rem
 }
 
 .forest-checklist {
   h1 {
-    color: white;
-    background-color: green;
-  }
-
-  h2 {
-    background-color: #99dd99;
+    color: black;
+    background-color: #FFC300;
   }
 }
 
