--- a/OoTTracker/ClientApp/src/app/checklist/list/list.component.scss
+++ b/OoTTracker/ClientApp/src/app/checklist/list/list.component.scss
@@ -23,17 +23,26 @@ img {
   background-color: #eeaaaa;
 }
 
+.orange {
+  background-color: #FFA466;
+}
+
+.yellow {
+  background-color: #FFF9A6;
+}
+
 .green {
   background-color: #99dd99;
 }
 
+.blue {
+  background-color: #99ccff;
+}
+
+.purple {
+  background-color: #cc88ff;
+}
+
 .list {
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1), 0 3px 10px 0 rgba(0, 0, 0, 0.095);
-
-  .check {
-    margin: 0;
-    padding: 0 0 0 .5rem;
-    border: 1px solid lightgray;
-    cursor: pointer;
-  }
 }
