--- a/OoTTracker/ClientApp/src/app/checklist/mountain-checklist/mountain-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/mountain-checklist/mountain-checklist.component.html
@@ -3,11 +3,11 @@
 
   <app-list [name]="'Trail'" [list]="trailChecks" [color]="'red'"></app-list>
 
-  <app-list [name]="'Dodongo\'s Cavern'" [color]="'red'"></app-list>
+  <app-list [name]="dungeonSource + 'Dodongo\'s Cavern'" [color]="'red'"></app-list>
 
-  <app-list [name]="'Goron City'" [list]="lostWoodsChecks" [color]="'red'"></app-list>
+  <app-list [name]="'Goron City'" [list]="goronCityChecks" [color]="'red'"></app-list>
 
-  <app-list [name]="'Crater'" [list]="sacredForestMeadowChecks" [color]="'red'"></app-list>
+  <app-list [name]="'Crater'" [list]="craterChecks" [color]="'red'"></app-list>
 
-  <app-list [name]="'Fire Temple'" [color]="'red'"></app-list>
+  <app-list [name]="dungeonSource + 'Fire Temple'" [color]="'red'"></app-list>
 </div>
