--- a/OoTTracker/ClientApp/src/app/checklist/river-checklist/river-checklist.component.scss
+++ b/OoTTracker/ClientApp/src/app/checklist/river-checklist/river-checklist.component.scss
@@ -18,17 +18,13 @@ h2 {
 
 .checklist {
   margin: .5rem 0 0 0;
-  width: 14rem
+  width: 11rem;
 }
 
 .forest-checklist {
   h1 {
     color: white;
-    background-color: green;
-  }
-
-  h2 {
-    background-color: #99dd99;
+    background-color: #0000bb;
   }
 }
 
