--- a/OoTTracker/ClientApp/src/app/home/home.component.html
+++ b/OoTTracker/ClientApp/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="home-container">
-  <app-tracker class="tracker"></app-tracker>
+  <div class="flex-column">
+    <app-tracker class="tracker"></app-tracker>
+    <app-notes class="notes"></app-notes>
+  </div>
 
   <app-checklist class="checklist"></app-checklist>
-
-  <app-notes class="notes"></app-notes>
 </div>
