--- a/OoTTracker/ClientApp/src/app/tracker/tracker.component.scss
+++ b/OoTTracker/ClientApp/src/app/tracker/tracker.component.scss
@@ -1,6 +1,6 @@
 .container {
   background-size: cover;
-  height: 100%;
+  background-repeat: no-repeat;
   background-image: url("../../assets/ItemTracker.png");
 }
 
