Added all gossip stones

--- a/OoTTracker/ClientApp/src/app/checklist/forest-checklist/forest-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/forest-checklist/forest-checklist.component.html
@@ -3,7 +3,7 @@
 
   <app-list [name]="'Kokiri Forest'" [list]="kokiriChecks" [color]="'green'"></app-list>
 
-  <app-list [name]="dungeonSource + 'Deku Tree'" [color]="'green'"></app-list>
+  <app-list [name]="dungeonSource + 'Deku Tree'" [list]="dekuTreeChecks" [color]="'green'"></app-list>
 
   <app-list [name]="'Lost Woods'" [list]="lostWoodsChecks" [color]="'green'"></app-list>
 
