--- a/OoTTracker/ClientApp/src/app/checklist/mountain-checklist/mountain-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/mountain-checklist/mountain-checklist.component.html
@@ -3,7 +3,7 @@
 
   <app-list [name]="'Trail'" [list]="trailChecks" [color]="'red'"></app-list>
 
-  <app-list [name]="dungeonSource + 'Dodongo\'s Cavern'" [color]="'red'"></app-list>
+  <app-list [name]="dungeonSource + 'Dodongo\'s Cavern'" [list]="dodongoChecks" [color]="'red'"></app-list>
 
   <app-list [name]="'Goron City'" [list]="goronCityChecks" [color]="'red'"></app-list>
 
