--- a/OoTTracker/ClientApp/src/app/checklist/castle-checklist/castle-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/castle-checklist/castle-checklist.component.html
@@ -8,4 +8,6 @@
   <app-list [name]="'Castle Grounds'" [list]="groundsChecks" [color]="'gray'"></app-list>
 
   <app-list [name]="'Outside Ganon\'s Castle'" [list]="ganonChecks" [color]="'gray'"></app-list>
+
+  <app-trials-list></app-trials-list>
 </div>
