--- a/OoTTracker/ClientApp/src/app/checklist/hyrule-field-checklist/hyrule-field-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/hyrule-field-checklist/hyrule-field-checklist.component.html
@@ -7,5 +7,5 @@
 
   <app-list [name]="'Lake Hylia'" [list]="lakeChecks" [color]="'blue'"></app-list>
 
-  <app-list [name]="dungeonSource + 'Water Temple'" [color]="'blue'"></app-list>
+  <app-dungeon-list [name]="dungeonSource + 'Water Temple'" [dungeonChecks]="4" [keyChecks]="7" [skullChecks]="5" [color]="'blue'"></app-dungeon-list>
 </div>
