--- a/OoTTracker/ClientApp/src/app/checklist/forest-checklist/forest-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/forest-checklist/forest-checklist.component.html
@@ -3,11 +3,11 @@
 
   <app-list [name]="'Kokiri Forest'" [list]="kokiriChecks" [color]="'green'"></app-list>
 
-  <app-list [name]="dungeonSource + 'Deku Tree'" [list]="dekuTreeChecks" [color]="'green'"></app-list>
+  <app-dungeon-list [name]="dungeonSource + 'Deku Tree'" [list]="dekuTreeChecks" [dungeonChecks]="7" [skullChecks]="4" [color]="'green'"></app-dungeon-list>
 
   <app-list [name]="'Lost Woods'" [list]="lostWoodsChecks" [color]="'green'"></app-list>
 
   <app-list [name]="'Sacred Forest Meadow'" [list]="sacredForestMeadowChecks" [color]="'green'"></app-list>
 
-  <app-list [name]="dungeonSource + 'Forest Temple'" [color]="'green'"></app-list>
+  <app-dungeon-list [name]="dungeonSource + 'Forest Temple'" [dungeonChecks]="3" [keyChecks]="6" [skullChecks]="5" [color]="'green'"></app-dungeon-list>
 </div>
