--- a/OoTTracker/ClientApp/src/app/checklist/kakariko-checklist/kakariko-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/kakariko-checklist/kakariko-checklist.component.html
@@ -3,9 +3,9 @@
 
   <app-list [name]="'Kakariko Village'" [list]="villageChecks" [color]="'purple'"></app-list>
 
-  <app-list [name]="dungeonSource + 'Bottom of the Well'" [color]="'purple'"></app-list>
+  <app-dungeon-list [name]="dungeonSource + 'Bottom of the Well'" [dungeonChecks]="14" [skullChecks]="3" [color]="'purple'"></app-dungeon-list>
 
   <app-list [name]="'Graveyard'" [list]="graveyardChecks" [color]="'purple'"></app-list>
 
-  <app-list [name]="dungeonSource + 'Shadow Temple'" [color]="'purple'"></app-list>
+  <app-dungeon-list [name]="dungeonSource + 'Shadow Temple'" [dungeonChecks]="8" [keyChecks]="6" [skullChecks]="5" [color]="'purple'"></app-dungeon-list>
 </div>
