--- a/OoTTracker/ClientApp/src/app/checklist/river-checklist/river-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/river-checklist/river-checklist.component.html
@@ -7,7 +7,7 @@
 
   <app-list [name]="'Zora\'s Fountain'" [list]="fountainChecks" [color]="'blue'"></app-list>
 
-  <app-list [name]="dungeonSource + 'Jabu Jabu'" [color]="'blue'"></app-list>
+  <app-dungeon-list [name]="dungeonSource + 'Jabu Jabu'" [dungeonChecks]="4" [skullChecks]="4" [color]="'blue'"></app-dungeon-list>
 
-  <app-list [name]="dungeonSource + 'Ice Cavern'" [list]="iceCavernChecks" [color]="'blue'"></app-list>
+  <app-dungeon-list [name]="dungeonSource + 'Ice Cavern'" [list]="iceCavernChecks" [dungeonChecks]="4" [skullChecks]="3" [color]="'blue'"></app-dungeon-list>
 </div>
