--- a/OoTTracker/ClientApp/src/app/checklist/list/check/check.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/list/check/check.component.html
@@ -1,4 +1,4 @@
-﻿<div class="check" [class.checked]="this.checked" (click)="toggleCheck()">
+﻿<div *ngIf="inEraFilter() && inTimeFilter()" class="check" [class.checked]="this.checked" (click)="toggleCheck()">
     <img src="{{check.type}}"/>
     {{check.name}}
 </div>
