Finished Time of Day and Era filters

--- a/OoTTracker/ClientApp/src/app/checklist/checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/checklist.component.html
@@ -6,4 +6,5 @@
   <app-kakariko-checklist></app-kakariko-checklist>
   <app-desert-checklist></app-desert-checklist>
   <app-ranch-checklist></app-ranch-checklist>
+  <app-checklist-filter></app-checklist-filter>
 </div>
