--- a/OoTTracker/ClientApp/src/app/checklist/desert-checklist/desert-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/desert-checklist/desert-checklist.component.html
@@ -5,7 +5,7 @@
 
   <app-list [name]="'Gerudo Fortress'" [list]="fortressChecks" [color]="'orange'"></app-list>
 
-  <app-dungeon-list [name]="dungeonSource + 'Gerudo Training Grounds'" [dungeonChecks]="13" [keyChecks]="9" [color]="'orange'"></app-dungeon-list>
+  <app-dungeon-list [name]="dungeonSource + 'Gerudo Training Grounds'" [dungeonChecks]="13" [keyChecks]="9" [color]="'orange'" [era]="adult"></app-dungeon-list>
 
   <app-list [name]="'Haunted Wasteland'" [list]="wastelandChecks" [color]="'orange'"></app-list>
 
