--- a/OoTTracker/ClientApp/src/app/checklist/mountain-checklist/mountain-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/mountain-checklist/mountain-checklist.component.html
@@ -9,5 +9,5 @@
 
   <app-list [name]="'Crater'" [list]="craterChecks" [color]="'red'"></app-list>
 
-  <app-dungeon-list [name]="dungeonSource + 'Fire Temple'" [dungeonChecks]="6" [keyChecks]="9" [skullChecks]="5" [color]="'red'"></app-dungeon-list>
+  <app-dungeon-list [name]="dungeonSource + 'Fire Temple'" [dungeonChecks]="6" [keyChecks]="9" [skullChecks]="5" [color]="'red'" [era]="adult"></app-dungeon-list>
 </div>
