Updated HyruleFieldChecklist to be OtherChecklist

--- a/OoTTracker/ClientApp/src/app/checklist/other-checklist/other-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/other-checklist/other-checklist.component.html
@@ -1,7 +1,7 @@
 <div class="forest-checklist checklist">
   <h1 class="rounded">Other</h1>
 
-  <app-list [name]="'Lon Lon Ranch'" [list]="ranchChecks" [color]="'yellow'"></app-list>
+  <app-list [name]="'Lon Lon Ranch'" [list]="ranchChecks" [color]="'yellow'" [era]="child"></app-list>
 
   <app-list [name]="'Hyrule Field'" [list]="fieldChecks" [color]="'yellow'"></app-list>
 
