Updated eras for trials and other checklists

--- a/OoTTracker/ClientApp/src/app/checklist/castle-checklist/castle-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/castle-checklist/castle-checklist.component.html
@@ -5,9 +5,9 @@
 
   <app-list [name]="'Temple of Time'" [list]="templeChecks" [color]="'gray'"></app-list>
 
-  <app-list [name]="'Castle Grounds'" [list]="groundsChecks" [color]="'gray'"></app-list>
+  <app-list [name]="'Castle Grounds'" [list]="groundsChecks" [color]="'gray'" [era]="child"></app-list>
 
-  <app-list [name]="'Outside Ganon\'s Castle'" [list]="ganonChecks" [color]="'gray'"></app-list>
+  <app-list [name]="'Outside Ganon\'s Castle'" [list]="ganonChecks" [color]="'gray'" [era]="adult"></app-list>
 
   <app-trials-list></app-trials-list>
 </div>
