--- a/OoTTracker/ClientApp/src/app/checklist/desert-checklist/desert-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/desert-checklist/desert-checklist.component.html
@@ -3,7 +3,7 @@
 
   <app-list [name]="'Gerudo Valley'" [list]="valleyChecks" [color]="'orange'"></app-list>
 
-  <app-list [name]="'Gerudo Fortress'" [list]="fortressChecks" [color]="'orange'"></app-list>
+  <app-list [name]="'Gerudo Fortress'" [list]="fortressChecks" [color]="'orange'" [era]="adult"></app-list>
 
   <app-dungeon-list [name]="dungeonSource + 'Gerudo Training Grounds'" [dungeonChecks]="13" [keyChecks]="9" [color]="'orange'" [era]="adult"></app-dungeon-list>
 
