--- a/OoTTracker/ClientApp/src/app/checklist/list/list.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="list">
+<div class="list" [hidden]="outOfEraFilter()">
     <h2 class="header {{color}}" [class.rounded]="list.length == 0" [innerHTML]="name"></h2>
     <div *ngFor="let check of list">
         <div *ngIf="!check.checked" class="check chest">
