Revamped hints section

--- a/OoTTracker/ClientApp/src/app/notes/item-selection/item-selection.component.html
+++ b/OoTTracker/ClientApp/src/app/notes/item-selection/item-selection.component.html
@@ -1,4 +1,4 @@
-﻿<select class="path-hint-dropdown {{color}}" [(ngModel)]="color">
+﻿<select class="item-select {{color}}" [(ngModel)]="color">
   <option [value]="'gray'" class="gray">--- Select One ---</option>
   <option *ngFor="let option of options" [value]="'black'" class="black">{{option}}</option>
 </select>
