--- a/OoTTracker/ClientApp/src/app/notes/boss-selection/boss-selection.component.html
+++ b/OoTTracker/ClientApp/src/app/notes/boss-selection/boss-selection.component.html
@@ -1,4 +1,4 @@
-<select name="boss" class="path-hint-dropdown {{color}}" [(ngModel)]="color">
+<select name="boss" class="boss-select {{color}}" [(ngModel)]="color">
   <option [value]="'gray'" class="gray">--- Select One ---</option>
   <option *ngFor="let boss of bosses" [value]="boss.color" class="{{boss.color}}">{{boss.name}}</option>
 </select>
