--- a/OoTTracker/ClientApp/src/app/notes/item-location-selection/item-location-selection.component.html
+++ b/OoTTracker/ClientApp/src/app/notes/item-location-selection/item-location-selection.component.html
@@ -1,6 +1,6 @@
-<select name="boss" class="sometimes-hint-dropdown {{color}}" [(ngModel)]="color">
+﻿<select name="location" class="item-location-dropdown {{color}}" [(ngModel)]="color">
   <option [value]="'gray'" class="gray">--- Select One ---</option>
-  <optgroup *ngFor="let location of sometimesLocations" label="{{location.name}}" class="black">
+  <optgroup *ngFor="let location of locations" label="{{location.name}}" class="black">
     <option *ngFor="let region of location.regions" [value]="region.color" class="{{region.color}}">{{region.name}}</option>
   </optgroup>
 </select>
