--- a/OoTTracker/ClientApp/src/app/notes/item-location-selection/item-location-selection.component.scss
+++ b/OoTTracker/ClientApp/src/app/notes/item-location-selection/item-location-selection.component.scss
@@ -1,3 +1,13 @@
+﻿.item-location-dropdown {
+  width: 100%;
+  height: 20px;
+  border-radius: 5px;
+}
+
+.item-location-dropdown {
+  width: 200px;
+}
+
 .green {
   color: green;
 }
