--- a/OoTTracker/ClientApp/src/app/notes/notes.component.scss
+++ b/OoTTracker/ClientApp/src/app/notes/notes.component.scss
@@ -27,3 +27,20 @@ h2 {
 .hints {
   padding: .5rem 1rem;
 }
+
+.hint {
+  display: flex;
+  justify-content: space-between;
+}
+
+.hint-title {
+  display: flex;
+  justify-content: space-between;
+
+  button {
+    height: 24px;
+    background-color: white;
+    border-color: black;
+    border-radius: 5px;
+  }
+}
